ConnexoProject/force-app/main/default/objects/Reporting__c/Reporting__c.object-meta.xml
<CustomObject>
    <description>Object created to track DMS groups users data via reporting . Not to be used in salesforce UI</description>
    <label>Reporting</label>
    <nameField>
        <label>Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>