ConnexoProject/force-app/main/default/objects/Reporting__c/fields/Group_Member_No__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_No__c</fullName>
    <description>Group Member No. of DMS group user</description>
    <label>Group Member No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>