ConnexoProject/force-app/main/default/objects/Reporting__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <label>Related User</label>
    <length>25</length>
    <type>Text</type>
</CustomField>